--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
                             905-848-4955
                         </label>
                     </td>
+                    <td class="td2"></td>
                 </tr>
                 <tr>
-                    <td class="ENGorFRENCH">
-                        <img id="img1" src="pics/frenchlanguagetutor.jpg" style="height: 169px;" />
-                        <img id="TeachandStudentpic" src="pics/teacher-and-pupils.jpg" />
-                        <label id="bulletlabel">
+                    <td class="ENGorFRENCH" style="width: 32%; float: left;">
+                        <img id="img1" src="pics/frenchlanguagetutor.jpg" style="height: 169px;" /></td>
+                        <td style="width: 32%; float: left;"><img id="TeachandStudentpic" src="pics/teacher-and-pupils.jpg" /></td>
+                        <td style="width: 32%; float: left;"><label id="bulletlabel">
                             <ul ID="BulletedList1" runat="server">
                                 <li>Online Available</li>
                                 <li>Flexible Hours</li>
