--- a/Email.html
+++ b/Email.html
@@ -17,7 +17,7 @@
             <h1 style="text-align:center; font-size: x-large;">Email To Setup An Appointment</h1>
         </div>
         <div id="emailpage" data-role="fieldcontain" class="ui-page-theme-b">
-            <form action="MAILTO:bestutors@nextsolution.ca" method="post" enctype="multipart/form-data" style="margin-right: 10px;">
+            <form action="MAILTO:bestutors@nextsolution.ca" method="post" enctype="text/plain" style="margin-right: 10px;">
                 <h2 data-role="header" style="text-align:center;">Send A Message</h2>
                 <label>
                     Your Name:
