--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
                     <td class="ENGorFRENCH" style="width: 32%; float: left;">
                         <img id="img1" src="pics/frenchlanguagetutor.jpg" style="height: 169px;" /></td>
                         <td style="width: 32%; float: left;"><img id="TeachandStudentpic" src="pics/teacher-and-pupils.jpg" /></td>
-                        <td style="width: 32%; float: left;"><label id="bulletlabel">
-                            <ul ID="BulletedList1" runat="server">
+                        <td style="width: 32%; float: left;">
+                            <ul ID="BulletedList1">
                                 <li>Online Available</li>
                                 <li>Flexible Hours</li>
                                 <li>Qualified Educators</li>
                             </ul>
-                        </label>
                     </td>
                 </tr>
                 <tr>
