--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <td class="ENGorFRENCH" style="width: 32%; float: left;">
                         <img id="img1" src="pics/frenchlanguagetutor.jpg" style="height: 169px;" /></td>
                         <td style="width: 32%; float: left;"><img id="TeachandStudentpic" src="pics/teacher-and-pupils.jpg" /></td>
-                        <td style="width: 32%; float: left;">
+                        <td style="width: 32%; float: right;">
                             <ul ID="BulletedList1">
                                 <li>Online Available</li>
                                 <li>Flexible Hours</li>
