--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             905-848-4955
                         </label>
                     </td>
-                    <td class="td2"></td>
+                    <td class="td2"><img id="schoolid" src="pics/animatedschool.jpg" /></td>
                 </tr>
                 <tr>
                     <td class="ENGorFRENCH" style="width: 32%; float: left;">
