--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                             1 to 1 or Small Group Instruction Available.
                             <br />
                             School Trained for Students ranging from Kindergarten to Grade 12.
-                        </Label>
+                        </Label></td></tr>
+                <tr>
+                    <td>
                         <img id="img2" src="pics/engtutor.png" />
                     </td>
                 </tr>
