--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <br />
                             At Home or On-site Education Services<br />(Brampton or Mississauga)
                             <br />
-                            Limited Time Offer from $20 an hour.
+                            Limited Time Offer from $20 an hour
                         </label>
                         <br />
                         <label id="lblphone">
@@ -46,13 +46,15 @@
                 <tr>
                     <td id="picTD">
                         <Label ID="Label2" Text="Label">
-                            1 to 1 or Small Group Instruction Available.
+                            1 to 1 or Small Group Instruction Available
                             <br />
-                            School Trained for Students ranging from Kindergarten to Grade 12.
+                            School Trained for Students ranging from Kindergarten to Grade 12
                         </Label></td></tr>
                 <tr>
                     <td>
-                        <img id="img2" src="pics/engtutor.png" />
+                        <div style="margin: 0 auto; width: 230px">
+                            <img src="pics/engtutor.png" id="img2" style="width: 220px" />
+                        </div>
                     </td>
                 </tr>
             </table>
