--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <tr>
                     <td id="picTD">
                         <Label ID="Label2" Text="Label">
-                            1 to 1 or Small Group Instruction Available
+                            1 to 1 Session or Small Group Session Available
                             <br />
-                            School Trained for Students ranging from Kindergarten to Grade 12
+                            Tutoring for Students that range from Kindergarten up to Grade 12
                         </Label></td></tr>
                 <tr>
                     <td>
