--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td id="picTD">
                         <Label ID="Label2" Text="Label">
-                            1 to 1 Session or Small Group Session Available
+                            1 to 1 Sessions or Small Group Sessions Available
                             <br />
                             Tutoring for Students that range from Kindergarten up to Grade 12
                         </Label></td></tr>
