--- a/Email.html
+++ b/Email.html
@@ -15,6 +15,7 @@
         <div data-role="header">
             <a href="index.html" data-icon="home" style="font-size: 130%;">Home Page</a>
             <h1 style="text-align:center; font-size: x-large;">Email To Setup An Appointment</h1>
+            <label data-role="header" style="text-align: right; font-size: large; margin-right: 30px;">Contact Phone #: 416-508-1194</label>
         </div>
         <div id="emailpage" data-role="fieldcontain" class="ui-page-theme-b">
             <form action="MAILTO:bestutors@nextsolution.ca" method="post" enctype="text/plain" style="margin-right: 10px;">
